style: ensure tooltip is readable in both light and dark themes

--- a/assets/stylesheets/theme.scss
+++ b/assets/stylesheets/theme.scss
@@ -1,4 +1,6 @@
 /*-- scss:defaults --*/
+$tooltip-color: $background !default;
+$tooltip-bg: $foreground !default;
 
 /*-- scss:rules --*/
 .navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
